Prevent roles from overflowing by dynamically changing their position
Secondary roles holder is now div instead of table

--- a/index.css
+++ b/index.css
@@ -80,14 +80,17 @@ body {
 }
 
 .roles {
+	text-align: left;
 	margin-left: 10px;
 	margin-right: 10px;
-	padding-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .secondary_role {
-	margin-left: 7px;
-	margin-right: 7px;
+	display: inline-block;
+	vertical-align: super;
+	margin-left: 9px;
+	margin-right: 9px;
 	font-size: 20px;
 	padding: 0px 10px 4px 10px;
 	background-color: #271C1C;
